--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
   <meta name="twitter:title" content="Movil | Crafting Visual Experiences" />
   <meta name="twitter:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
   <meta name="twitter:image" content="/uploads/default-video-thumb.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="alternate icon" href="/favicon.svg" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
