Update favicon assets

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
   <meta name="twitter:title" content="Movil | Crafting Visual Experiences" />
   <meta name="twitter:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
   <meta name="twitter:image" content="/uploads/default-video-thumb.jpg" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <link rel="alternate icon" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon-32x32.png" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
