--- a/public/admin.html
+++ b/public/admin.html
@@ -547,7 +547,7 @@
   <div class="container">
     <div class="admin-header">
       <h1>Movil Admin</h1>
-      <form action="/admin/logout" method="post">
+      <form action="/api/admin/logout" method="post">
         <button type="submit" class="logout-btn">Sign Out</button>
       </form>
     </div>
