Update contact socials and phone number

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     "url": "https://movil.mv/",
     "image": "https://movil.mv/static/default-video-thumb.jpg",
     "description": "Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives.",
-    "telephone": "+9603013667",
+    "telephone": "+9607899922",
     "email": "sales@movillive.com",
     "address": {
       "@type": "PostalAddress",
@@ -37,11 +37,11 @@
       "addressCountry": "MV"
     },
     "areaServed": "Maldives",
-    "sameAs": [
-      "https://www.instagram.com/movilstudio",
-      "https://www.facebook.com/movilstudio",
-      "https://www.tiktok.com/@movilstudio"
-    ]
+      "sameAs": [
+      "https://www.instagram.com/movilshowroom",
+      "https://www.facebook.com/movilshowroom",
+      "https://www.tiktok.com/@movilshowroom"
+      ]
   }
   </script>
   
@@ -148,18 +148,18 @@
               <span class="contact-card-icon"><i class="fa-solid fa-phone"></i></span>
               <div class="contact-card-meta">
                 <h3 class="contact-card-title">Call</h3>
-                <p class="contact-card-value">+960 3013667</p>
+                <p class="contact-card-value">+960 789 9922</p>
               </div>
             </div>
-            <a class="contact-card-action" href="tel:+9603013667">
+            <a class="contact-card-action" href="tel:+9607899922">
               <i class="fa-solid fa-phone"></i> Call Now
             </a>
             <div class="contact-card-secondary">
-              <a class="contact-card-chip" href="viber://chat?number=9603013667" target="_blank" rel="noopener noreferrer">
+              <a class="contact-card-chip" href="viber://chat?number=9607899922" target="_blank" rel="noopener noreferrer">
                 <img src="https://cdn.simpleicons.org/viber/FFFFFF" alt="Viber" />
                 Viber
               </a>
-              <a class="contact-card-chip" href="https://wa.me/9603013667" target="_blank" rel="noopener noreferrer">
+              <a class="contact-card-chip" href="https://wa.me/9607899922" target="_blank" rel="noopener noreferrer">
                 <img src="https://cdn.simpleicons.org/whatsapp/FFFFFF" alt="WhatsApp" />
                 WhatsApp
               </a>
@@ -214,24 +214,24 @@
             <a class="contact-value" href="https://maps.app.goo.gl/6Be2Rj4qKT4tFPqA9" target="_blank" rel="noopener noreferrer">Male, Maldives</a>
           </span>
         </p>
-        <p><i class="fa-solid fa-phone"></i> <a class="contact-value" href="tel:+9603013667">+960 3013667</a></p>
+        <p><i class="fa-solid fa-phone"></i> <a class="contact-value" href="tel:+9607899922">+960 789 9922</a></p>
         <p><i class="fa-solid fa-envelope"></i> <a class="contact-value" href="mailto:sales@movillive.com">sales@movillive.com</a></p>
       </div>
 
       <div class="footer-icons">
-        <a href="https://wa.me/9603013667" target="_blank" title="WhatsApp">
+        <a href="https://wa.me/9607899922" target="_blank" title="WhatsApp">
           <img src="https://cdn.simpleicons.org/whatsapp/FFFFFF" alt="WhatsApp" />
         </a>
-        <a href="https://www.instagram.com/movilstudio" target="_blank" title="Instagram">
+        <a href="https://www.instagram.com/movilshowroom" target="_blank" title="Instagram">
           <img src="https://cdn.simpleicons.org/instagram/FFFFFF" alt="Instagram" />
         </a>
-        <a href="https://www.facebook.com/movilstudio" target="_blank" title="Facebook">
+        <a href="https://www.facebook.com/movilshowroom" target="_blank" title="Facebook">
           <img src="https://cdn.simpleicons.org/facebook/FFFFFF" alt="Facebook" />
         </a>
-        <a href="https://www.tiktok.com/@movilstudio" target="_blank" title="TikTok">
+        <a href="https://www.tiktok.com/@movilshowroom" target="_blank" title="TikTok">
           <img src="https://cdn.simpleicons.org/tiktok/FFFFFF" alt="TikTok" />
         </a>
-        <a href="viber://chat?number=9603013667" target="_blank" title="Viber">
+        <a href="viber://chat?number=9607899922" target="_blank" title="Viber">
           <img src="https://cdn.simpleicons.org/viber/FFFFFF" alt="Viber" />
         </a>
       </div>
