Polish contact card styling for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,9 @@
               <span class="contact-card-icon"><i class="fa-solid fa-phone"></i></span>
               <div class="contact-card-meta">
                 <h3 class="contact-card-title">Call</h3>
-                <p class="contact-card-value">+960 789 9922</p>
+                <p class="contact-card-value">
+                  <a class="contact-inline-link" href="tel:+9607899922">+960 789 9922</a>
+                </p>
               </div>
             </div>
             <a class="contact-card-action" href="tel:+9607899922">
@@ -171,7 +173,9 @@
               <span class="contact-card-icon"><i class="fa-solid fa-envelope"></i></span>
               <div class="contact-card-meta">
                 <h3 class="contact-card-title">Email</h3>
-                <p class="contact-card-value">sales@movillive.com</p>
+                <p class="contact-card-value">
+                  <a class="contact-inline-link" href="mailto:sales@movillive.com">sales@movillive.com</a>
+                </p>
               </div>
             </div>
             <a class="contact-card-action" href="mailto:sales@movillive.com">
