Polish hero, cards, and loading experience

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,12 @@
   </header>
 
   <section id="hero" class="hero">
+    <div class="hero-ambient" aria-hidden="true">
+      <div class="hero-orb hero-orb--one" data-depth="0.24"></div>
+      <div class="hero-orb hero-orb--two" data-depth="-0.16"></div>
+      <div class="hero-orb hero-orb--three" data-depth="0.12"></div>
+      <div class="hero-grid"></div>
+    </div>
     <div class="hero-content">
       <h1 id="heroText"><span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span></h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
