--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
               <span class="contact-card-icon"><i class="fa-solid fa-location-dot"></i></span>
               <div class="contact-card-meta">
                 <h3 class="contact-card-title">Visit Us</h3>
-                <p class="contact-card-value">Male, Maldives</p>
+                <p class="contact-card-value">H.Maanifa, Filligas Magu, Male' 20013</p>
               </div>
             </div>
             <a class="contact-card-action" href="https://maps.app.goo.gl/6Be2Rj4qKT4tFPqA9" target="_blank" rel="noopener noreferrer">
@@ -221,7 +221,7 @@
         <p>
           <i class="fa-solid fa-location-dot"></i>
           <span class="location-preview">
-            <a class="contact-value" href="https://maps.app.goo.gl/6Be2Rj4qKT4tFPqA9" target="_blank" rel="noopener noreferrer">Male, Maldives</a>
+            <a class="contact-value" href="https://maps.app.goo.gl/6Be2Rj4qKT4tFPqA9" target="_blank" rel="noopener noreferrer">H.Maanifa, Filligas Magu, Male' 20013</a>
           </span>
         </p>
         <p><i class="fa-solid fa-phone"></i> <a class="contact-value" href="tel:+9607899922">+960 789 9922</a></p>
