--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,11 @@
   <meta name="twitter:title" content="Movil | Crafting Visual Experiences" />
   <meta name="twitter:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
   <meta name="twitter:image" content="/static/default-video-thumb.jpg" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="shortcut icon" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
