Update social preview image to Movil logo

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,17 @@
   <meta property="og:title" content="Movil | Crafting Visual Experiences" />
   <meta property="og:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
   <meta property="og:url" content="/" />
-  <meta property="og:image" content="/static/default-video-thumb.jpg" />
+  <meta property="og:image" content="https://www.movillive.com/favicon/android-chrome-512x512.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="512" />
+  <meta property="og:image:height" content="512" />
+  <meta property="og:image:alt" content="Movil logo" />
   <meta property="og:locale" content="en_US" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Movil | Crafting Visual Experiences" />
   <meta name="twitter:description" content="Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives." />
-  <meta name="twitter:image" content="/static/default-video-thumb.jpg" />
+  <meta name="twitter:image" content="https://www.movillive.com/favicon/android-chrome-512x512.png" />
+  <meta name="twitter:image:alt" content="Movil logo" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
