--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,28 @@
 
   <section id="hero" class="hero">
     <div class="hero-ambient" aria-hidden="true">
+      <div class="hero-wall">
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+        <span class="hero-wall__tile"></span>
+      </div>
       <div class="hero-orb hero-orb--one" data-depth="0.24"></div>
       <div class="hero-orb hero-orb--two" data-depth="-0.16"></div>
       <div class="hero-orb hero-orb--three" data-depth="0.12"></div>
