Introduce animated stripe hero background

--- a/public/index.html
+++ b/public/index.html
@@ -81,31 +81,7 @@
   </header>
 
   <section id="hero" class="hero">
-    <div class="hero-ambient" aria-hidden="true">
-      <div class="hero-wall">
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-        <span class="hero-wall__tile"></span>
-      </div>
-      <div class="hero-grid"></div>
-    </div>
+    <div class="hero-background" aria-hidden="true"></div>
     <div class="hero-content">
       <h1 id="heroText"><span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span></h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
