Simplify hero animation for smoother mobile

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,11 @@
   </header>
 
   <section id="hero" class="hero">
-    <div class="hero-background" aria-hidden="true"></div>
+    <div class="hero-background" aria-hidden="true">
+      <div class="hero-stripe hero-stripe--one"></div>
+      <div class="hero-stripe hero-stripe--two"></div>
+      <div class="hero-stripe hero-stripe--three"></div>
+    </div>
     <div class="hero-content">
       <h1 id="heroText"><span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span></h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
