--- a/public/admin.html
+++ b/public/admin.html
@@ -538,6 +538,65 @@
       box-shadow: 0 18px 32px rgba(230, 57, 70, 0.5);
     }
 
+    .media-focus-controls {
+      margin-top: 10px;
+      padding: 12px;
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.12);
+      background: rgba(255, 255, 255, 0.04);
+      display: grid;
+      gap: 10px;
+    }
+
+    .media-focus-row {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .media-focus-row label {
+      flex: 0 0 110px;
+      font-size: 0.72rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: rgba(255, 255, 255, 0.65);
+    }
+
+    .media-focus-row input[type="range"] {
+      flex: 1;
+      accent-color: #08af8a;
+    }
+
+    .media-focus-value {
+      width: 46px;
+      text-align: right;
+      font-size: 0.78rem;
+      color: rgba(255, 255, 255, 0.78);
+    }
+
+    .media-focus-actions {
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .media-focus-reset {
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      background: transparent;
+      color: rgba(255, 255, 255, 0.8);
+      border-radius: 999px;
+      padding: 4px 14px;
+      font-size: 0.7rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: background 0.2s ease, color 0.2s ease;
+    }
+
+    .media-focus-reset:hover {
+      background: rgba(255, 255, 255, 0.12);
+      color: #fff;
+    }
+
     .upload-progress {
       display: none;
       align-items: center;
