--- a/public/admin.html
+++ b/public/admin.html
@@ -207,16 +207,18 @@
       display: inline-flex;
       align-items: center;
       gap: 4px;
-      padding: 6px 12px;
+      padding: 5px 11px;
       border-radius: 999px;
       border: 1px solid rgba(255, 255, 255, 0.08);
       background: rgba(12, 13, 22, 0.65);
       color: rgba(245, 246, 250, 0.82);
-      font-size: 0.7rem;
+      font-size: 0.68rem;
       letter-spacing: 0.06em;
       text-transform: uppercase;
       cursor: pointer;
       transition: var(--transition);
+      width: auto;
+      min-width: 0;
     }
 
     .admin-tag-chip:hover,
@@ -544,7 +546,8 @@
       border-radius: 12px;
       border: 1px solid rgba(255, 255, 255, 0.12);
       background: rgba(255, 255, 255, 0.04);
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: 10px;
     }
 
@@ -583,14 +586,14 @@
 
     .media-focus-row {
       display: flex;
-      align-items: center;
-      gap: 12px;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 6px;
     }
 
     .media-focus-row label {
-      flex: 0 0 110px;
-      font-size: 0.72rem;
-      letter-spacing: 0.08em;
+      font-size: 0.68rem;
+      letter-spacing: 0.1em;
       text-transform: uppercase;
       color: rgba(255, 255, 255, 0.65);
     }
