Refresh hero, cards, and lightbox visuals

--- a/public/index.html
+++ b/public/index.html
@@ -54,8 +54,8 @@
   
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap" rel="stylesheet" />
 
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -89,11 +89,17 @@
       <div class="hero-stripe hero-stripe--one"></div>
       <div class="hero-stripe hero-stripe--two"></div>
       <div class="hero-stripe hero-stripe--three"></div>
+      <div class="hero-orb hero-orb--one"></div>
+      <div class="hero-orb hero-orb--two"></div>
+      <div class="hero-grid"></div>
     </div>
     <div class="hero-content">
       <h1 id="heroText"><span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span></h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
-      <a href="#projects" class="btn">Explore Projects</a>
+      <div class="hero-ctas">
+        <a href="#projects" class="btn">Explore Projects</a>
+        <a href="#contact" class="btn btn-secondary">Book a Consultation</a>
+      </div>
     </div>
   </section>
 
