--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,10 @@
     <div class="hero-content">
       <h1 id="heroText"><span class="hero-text-inner" data-text="Crafting Visual Experiences">Crafting Visual Experiences</span></h1>
       <p class="hero-subtitle">Bold signs. Bigger impact.</p>
-      <a href="#projects" class="btn">Explore Projects</a>
+      <div class="hero-ctas">
+        <a href="#projects" class="btn">Explore Projects</a>
+        <a href="#contact" class="btn btn-secondary">Book a Consultation</a>
+      </div>
     </div>
   </section>
 
