Restore blocking CSS link to avoid flash

--- a/public/admin.html
+++ b/public/admin.html
@@ -6,9 +6,7 @@
   <title>Movil Admin</title>
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png"/>
-  <link rel="preload" href="style.css" as="style" />
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'" />
-  <noscript><link rel="stylesheet" href="style.css" /></noscript>
+  <link rel="stylesheet" href="style.css"/>
   <style>
     body {
       margin: 0;
