--- a/public/index.html
+++ b/public/index.html
@@ -61,9 +61,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
   <!-- Styles -->
-  <link rel="preload" href="style.css" as="style" />
-  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'" />
-  <noscript><link rel="stylesheet" href="style.css" /></noscript>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- HEADER -->
