--- a/public/admin.html
+++ b/public/admin.html
@@ -543,19 +543,34 @@
       box-shadow: 0 18px 32px rgba(230, 57, 70, 0.5);
     }
 
-    .media-focus-controls {
-      margin-top: 10px;
-      padding: 12px;
-      border-radius: 12px;
-      border: 1px solid rgba(255, 255, 255, 0.12);
-      background: rgba(255, 255, 255, 0.04);
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+    .media-focus-panel {
+      margin-top: 12px;
+      padding: 14px;
+      border-radius: 14px;
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      background: linear-gradient(145deg, rgba(16, 18, 28, 0.95), rgba(8, 8, 14, 0.9));
+      display: grid;
+      gap: 12px;
     }
 
-    .media-focus-controls[hidden] {
+    .media-focus-panel[hidden] {
       display: none !important;
+    }
+
+    .media-focus-panel__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 12px;
+      text-transform: uppercase;
+      letter-spacing: 0.2em;
+      font-size: 0.68rem;
+      color: rgba(245, 246, 250, 0.8);
+    }
+
+    .media-focus-controls {
+      display: grid;
+      gap: 12px;
     }
 
     .media-item--hero {
@@ -594,15 +609,21 @@
     .media-focus-row {
       display: flex;
       flex-direction: column;
-      align-items: stretch;
       gap: 6px;
     }
 
-    .media-focus-row label {
-      font-size: 0.68rem;
-      letter-spacing: 0.1em;
+    .media-focus-labels {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       text-transform: uppercase;
-      color: rgba(255, 255, 255, 0.65);
+      letter-spacing: 0.1em;
+      font-size: 0.68rem;
+      color: rgba(255, 255, 255, 0.7);
+    }
+
+    .media-focus-labels label {
+      color: inherit;
     }
 
     .media-focus-row input[type="range"] {
@@ -612,10 +633,8 @@
     }
 
     .media-focus-value {
-      width: 46px;
-      text-align: right;
-      font-size: 0.78rem;
-      color: rgba(255, 255, 255, 0.78);
+      font-size: 0.72rem;
+      color: rgba(255, 255, 255, 0.85);
     }
 
     .media-focus-actions {
@@ -624,13 +643,13 @@
     }
 
     .media-focus-reset {
-      border: 1px solid rgba(255, 255, 255, 0.18);
-      background: transparent;
-      color: rgba(255, 255, 255, 0.8);
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.06);
+      color: #fff;
       border-radius: 999px;
-      padding: 4px 14px;
-      font-size: 0.7rem;
-      letter-spacing: 0.08em;
+      padding: 4px 10px;
+      font-size: 0.65rem;
+      letter-spacing: 0.12em;
       text-transform: uppercase;
       cursor: pointer;
       transition: background 0.2s ease, color 0.2s ease;
@@ -667,6 +686,15 @@
       border: 2px solid #0b0b12;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.35);
       cursor: pointer;
+    }
+
+    .media-focus-hint {
+      margin: 10px 0 0;
+      font-size: 0.7rem;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      text-align: center;
+      color: rgba(245, 246, 250, 0.58);
     }
 
     .upload-progress {
