--- a/public/admin.html
+++ b/public/admin.html
@@ -502,6 +502,7 @@
       background: rgba(240, 241, 246, 0.05);
       border: 1px solid rgba(255, 255, 255, 0.08);
       box-shadow: 0 14px 30px rgba(0, 0, 0, 0.28);
+      padding: 10px 10px 16px;
     }
 
     .media-item.marked-remove {
@@ -524,8 +525,8 @@
       position: relative;
       border-radius: 10px;
       overflow: hidden;
-      margin: 0;
-      min-height: 110px;
+      margin: 4px 0 12px;
+      min-height: 120px;
     }
 
     .media-focus-overlay {
@@ -585,8 +586,8 @@
 
     .media-remove {
       position: absolute;
-      top: 8px;
-      right: 8px;
+      top: 4px;
+      right: 4px;
       background: rgba(230, 57, 70, 0.9);
       color: #fff;
       border: none;
@@ -607,7 +608,7 @@
     }
 
     .media-focus-panel {
-      margin-top: 12px;
+      margin-top: 8px;
       padding: 14px;
       border-radius: 14px;
       border: 1px solid rgba(255, 255, 255, 0.18);
