Add nav logo image with header/footer links

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,10 @@
   <!-- HEADER -->
   <header>
     <div class="container">
-        <div class="logo">Movil</div>
+        <a class="logo" href="/" aria-label="Movil home">
+          <img src="navlogo.png" alt="Movil logo" />
+          <span class="sr-only">Movil</span>
+        </a>
         <nav class="nav" aria-label="Primary">
           <button class="nav__toggle" type="button" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">
             <span></span>
@@ -222,7 +225,9 @@
   <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-content">
-      <h3>Movil</h3>
+      <a class="footer-logo" href="/" aria-label="Movil home">
+        <img src="navlogo.png" alt="Movil logo" />
+      </a>
       <p>Crafting visual experiences.</p>
 
       <div class="footer-details">
