--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     "@type": "LocalBusiness",
     "name": "Movil",
     "url": "https://movil.mv/",
-    "image": "https://movil.mv/static/default-video-thumb.jpg",
+    "image": "https://res.cloudinary.com/dok4qykka/image/upload/v1762713000/movil/projects/fuda3m6p3shf7n8djkbm.jpg",
     "description": "Movil designs and fabricates custom signage, LED displays, and experiential installations for brands across the Maldives.",
     "telephone": "+9607899922",
     "email": "sales@movillive.com",
