--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png"/>
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png"/>
   <link rel="stylesheet" href="style.css"/>
+  <script src="/analytics.js" defer></script>
   <style>
     body {
       margin: 0;
