--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
+  <script src="/analytics.js" defer></script>
 </head>
 <body>
   <!-- HEADER -->
